--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -21,10 +21,12 @@
         android:text="Theme"
         android:layout_marginTop="12dp"
         android:textSize="18sp"
+        android:textStyle="bold"
         android:layout_marginBottom="8dp" />
 
     <Spinner
         android:id="@+id/themeSpinner"
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp" />
@@ -32,6 +34,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/logoutButton"
         android:textColor="@color/white"
+        android:layout_marginTop="12dp"
         android:layout_width="match_parent"
         android:textAllCaps="false"
         android:layout_height="wrap_content"
