--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -49,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Username"
+            android:drawableEnd="@drawable/ic_person"
             android:background="@drawable/edit_text_bg"
             android:padding="12dp"
             android:textColor="?android:textColorPrimary"
@@ -62,6 +63,7 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:layout_marginTop="15dp"
+            android:drawableEnd="@drawable/ic_eye"
             android:background="@drawable/edit_text_bg"
             android:padding="12dp"
             android:textColor="?android:textColorPrimary"
